2016-07-28  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/sighand.c (sighand_segv): Raise signal again, to enable core
	dumps.

2016-07-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plug_info): Don't send nvt summary.

2016-06-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Increase required cmake version from 2.6
	to 2.8 because 2.8 is the minimum version we are sure it
	works with.

	* INSTALL: Update accordingly.

2016-05-23  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (nvti_category_is_safe): New function.

2016-06-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Drop code
	path for glib<2.28 since we require now at least 2.32.

2016-06-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, INSTALL: Imcrease dependency for glib from 2.16 to
	2.32 in order to allow the use of newer API elements. Also,
	prior to 2.32 there is subject to the (disputed) CVE-2012-0039.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, INSTALL: Increase dependency for openvas-libraries
	from version 8.1.0 to 9.0.0. 8.1 existed only during beta phase and
	there will be no 8.1 release.

2016-06-09  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/sighand.c (make_em_die): Correct typo.

2016-06-09  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/sighand.c (print_trace): Handle write return correctly, as it may
	only write part of the string.

2016-05-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/sighand.c (print_trace): Add loop around write() call to handle
	signal interrupts. Don't return on error.

2016-05-09  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/log.c (log_get_fd): New function.

	* src/log.h: Add new function prototype.

	* src/sighand.c (print_trace, sighand_segv): Make function
	async-signal-safe.
